fix the background img stretching problem.

--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,12 @@ a {
 
 img {
   width: 100%;
-  /* height: 100%; */
 }
+
+.container1 img:first-child { 
+  height: 100%;
+}
+
 
 .container1 {
   position: relative;
@@ -125,7 +129,7 @@ img {
 }
 
 .overlap {
-  transition: bottom linear 2s;
+  transition: bottom linear 1s;
   position: absolute;
   bottom: -300px;
   left: 0;
